Fixed distorted images

--- a/main/src/app/about/about.component.scss
+++ b/main/src/app/about/about.component.scss
@@ -17,3 +17,9 @@
 .header-section{
   margin-top: 20px;
 }
+
+@media all and (max-width: 768px) {
+  #profileImg {
+    height: auto;
+  }
+}
