--- a/main/src/app/projects/projects.component.scss
+++ b/main/src/app/projects/projects.component.scss
@@ -36,3 +36,9 @@ h1{
 .card-img-top:hover{
   opacity: 0.8;
 }
+
+@media all and (max-width: 768px) {
+  #projectImg {
+    height: auto;
+  }
+}
